# backend-skeleton

./: .env  .gitignore  .gitlab-ci.yml  Makefile  README.md  mypy.ini  pyproject.toml  setup.cfg
backend/: .dockerignore
backend/app/: prestart.sh  pyproject.toml  requirements.txt  setup.cfg
backend/app/alembic/: env.py  script.py.mako
backend/app/app/: initialize_database.py  main.py  pre_start.py
backend/app/app/api/api_v1/: api.py
backend/app/app/fastapi_util/: api_model.py
backend/app/app/fastapi_util/orm/: base.py  columns.py
backend/app/app/fastapi_util/setup/: initialize.py  setup_database.py
backend/app/app/fastapi_util/util/: enums.py  session.py
backend/app/app/settings/: api.py  app.py  database.py
backend/app/tests/: conftest.py  tests_pre_start.py
backend/app/tests/api/: conftest.py  util.py
backend/app/tests/api/db_setup/: fixture.py
backend/app/tests/api/schemas/: test_openapi_schema.py
backend/app/tests/api/schemas/json_schemas/: non_admin.json
backend/container-scripts/: gunicorn_conf.py  init-db.sql  start-dev.sh  start-reload.sh  tests-start.sh
backend/dockerfiles/: app-base.dockerfile  backend.dockerfile  db.dockerfile  tests.dockerfile
docker/: docker-compose.deploy.labels.yml  docker-compose.deploy.yml  docker-compose.dev.yml  docker-compose.shared.yml  docker-compose.test.yml  env-backend.env  env-environment-dev.env  env-environment-prod.env  env-postgres.env  secrets-dev.env
scripts/: build-all-images.sh
scripts/app/: db-backup.sh  db-restore.sh
scripts/ci/: build.sh  deploy.sh  test-deploy.sh  test-dev.sh
(+7 files in other folders)
